--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 #logging.level.org.apache.coyote.http11=debug
 spring.messages.basename=messages,errors
+
+#?? ?? jsession ???
+server.servlet.session.tracking-modes=cookie
+#?? ?? ??
+server.servlet.session.timeout=60
